--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
-          aws-region: Asia Pacific (Mumbai) ap-south-1
+          aws-region: us-east-1
       - name: Deploy static site to S3 bucket
         run: aws s3 sync . s3://workflow-actions1 --delete
           
